--- a/install
+++ b/install
@@ -13,11 +13,11 @@ install() {
 	local failed_packages=
 	while IFS= read -r file; do
 		. "$file"
-		if [ $? -ne 0 ]; then
+		if [[ $? -ne 0 ]]; then
 			failed_packages="$failed_packages;$(echo $file | cut -d / -f 3 | cut -d _ -f 2)"
 		fi
 	done <<< $files
-	if [ -n failed_packages ]; then
+	if [[ -n failed_packages ]]; then
 		echo "The following packages failed to install:"
 		echo "$failed_packages" | sed -s "s/;/\n/g"
 	fi
