--- a/install
+++ b/install
@@ -9,7 +9,7 @@ detect-os() {
 # Args:
 #	OS ID
 install() {
-	local files=$(find ".install/$1" -type f)
+	local files=$(find "installers/$1" -type f)
 	local failed_packages=
 	while IFS= read -r file; do
 		. "$file"
